--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       "src": "/",
       "status": 308,
       "headers": {
-        "Location": "https://modmail.phodit.xyz"
+        "Location": ""
       }
     },
     {
